--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,12 @@ apply plugin: "androidx.navigation.safeargs.kotlin"
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.example.foody"
-        minSdkVersion 21
-        targetSdkVersion 30
+        minSdkVersion 27
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -38,6 +37,7 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    namespace 'com.example.foody'
 
 }
 
@@ -58,8 +58,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0-alpha03'
 
     // Navigation Component
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0'
 
     // Room components
     implementation "androidx.room:room-runtime:2.2.5"
